--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "webpack-dll-bundles-plugin",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "description": "A Webpack plugin for bundling group of packages as DLLs",
   "main": "index.js",
   "typings": "index.d.ts",
   "author": "Shlomi Assaf <shlomiasaf@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^6.0.58",
-    "@types/webpack": "^2.1.0",
-    "typescript": "2.0.10"
+    "@types/node": "^8.5.2",
+    "@types/webpack": "^4.4.26",
+    "typescript": "2.9.2"
   },
   "dependencies": {
-    "find-root": "^1.0.0",
-    "jsonfile": "^2.4.0"
+    "find-root": "^1.1.0",
+    "jsonfile": "^5.0.0"
   },
   "repository": {
     "type": "git",
